versions/v2.9/modules/en/pages/installation-and-upgrade/hosted-kubernetes/cloud-marketplace/aws/common-issues.adoc
= Common Issues
:page-languages: [en, zh]
:revdate: 2024-09-27
:page-revdate: {revdate}
:community-path: integrations-in-rancher/cloud-marketplace/aws-cloud-marketplace/common-issues.adoc 
:product-path: installation-and-upgrade/hosted-kubernetes/cloud-marketplace/aws/common-issues.adoc
ifeval::["{build-type}" != "community"]
:xref-aws-cloud-marketplace-adapter-reqs: xref:installation-and-upgrade/hosted-kubernetes/cloud-marketplace/aws/adapter-requirements.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-aws-cloud-marketplace-adapter-reqs: xref:integrations-in-rancher/cloud-marketplace/aws-cloud-marketplace/adapter-requirements.adoc
endif::[]

*After installing the adapter, a banner message appears in Rancher that says "AWS Marketplace Adapter: Unable to run the adapter, please check the adapter logs"*

This error indicates that while the adapter was installed into the cluster, an error has occurred which prevents it from properly checking-in/checking-out licenses.

This often occurs because the IAM role was not set up properly. Review the {xref-aws-cloud-marketplace-adapter-reqs}[prerequisites] and verify that:

* An OIDC provider has been created/associated with the cluster Rancher is running on.
* The IAM role has been configured to trust this OIDC provider.
* The IAM role has at least the permissions outlined in the policy.

If all of the above have been configured correctly, reach out to support for assistance.

*I see a banner message that states, "AWS Marketplace Adapter: You have exceeded your licensed node count. At least x more license(s) are required in AWS to become compliant"*

This message indicates that you do not have enough entitlements for the amount of nodes Rancher is currently managing.

Keep in mind the following limitations:

* Each entitlement is valid for a certain number of nodes.
* Every node currently managed by Rancher counts toward your usage total (with exception of nodes in the cluster rancher is installed on).
* Each entitlement can be used by at most one Rancher instance. For example, if you have two running Rancher instances in your account (each installed on a separate EKS cluster), then you will need at least two entitlements.

You may also have recently uninstalled/re-installed the adapter. If the adapter loses track of the licenses that it is currently managing, it can take up to an hour to resolve the actual state of the licenses.
